cfn/alb.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Application Load Balancer

Parameters:
  Namespace:
    Type: String
    AllowedPattern: "[a-z][a-z0-9-]+"

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID

  SubnetA:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet A ID

  SubnetB:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet B ID

  DomainName:
    Type: String
    Description: Domain Name

  HostedZone:
    Type: AWS::Route53::HostedZone::Id

  DefaultSslPolicy:
    Type: String
    Default: ELBSecurityPolicy-FS-1-2-Res-2020-10

  SSLCertificateArn:
    Description: "The ARN of the SSL certificate to use for the HTTPS listener"
    Type: String
    

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Ref AWS::StackName
      VpcId: !Ref VpcId
      Tags:
        - Key: enya:namespace
          Value: !Ref Namespace
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref AWS::StackName
      Subnets:
        - !Ref SubnetA
        - !Ref SubnetB
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Tags:
        - Key: enya:namespace
          Value: !Ref Namespace

  HttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: 404
            ContentType: text/plain
            MessageBody: Not Found
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  HTTPSRedirectListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref HttpListener
      Priority: 1
      Conditions:
        - Field: path-pattern
          Values: ["/*"]
      Actions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: 443
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: HTTP_301

  HTTPS443Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: 404 Not Found
            StatusCode: "404"
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCertificateArn
      SslPolicy: !Ref DefaultSslPolicy

Outputs:
  LoadBalancer:
    Value: !Ref LoadBalancer
  
  LoadBalancerSecurityGroup:
    Value: !Ref LoadBalancerSecurityGroup

  HttpListener:
    Value: !Ref HttpListener

  HttpsListener:
    Value: !Ref HTTPS443Listener

  DNSName:
    Value: !GetAtt LoadBalancer.DNSName

  ALBHostedZoneID:
    Value: !GetAtt LoadBalancer.CanonicalHostedZoneID
